# Process_Management_Simulation

./: .gitignore  CMakeLists.txt  CPU_node.c  CPU_node.h  CPU_queue.c  CPU_queue.h  LICENSE  README.md  blocked.c  blocked.h  control.c  makefile  process_manager.c  process_manager.h  queuenode.c  queuenode.h
files/: file.txt  file01.txt  fileR.txt  fileblocked.txt  filegrande.txt  fligrande.txt  test.txt
src/: CMakeLists.txt  Process.c  Process.h  file.txt  main  main.c  makefile  process.c  process.h
src/CPU/: CPU_node.c  CPU_node.h  CPU_queue.c  CPU_queue.h  cpu.c  cpu.h
src/Control/: Controler.c  Controler.h
src/Manager/: ProcessTable.c  ProcessTable.h  ReadyState.c  ReadyState.h  blockedState.c  blockedState.h  cpu.c  cpu.h  executingState.c  executingState.h  manager.c  manager.h  timer.c  timer.h
src/Printer/: Printer.c  Printer.h
src/blocked/: blocked_node.c  blocked_node.h  blocked_queue.c  blocked_queue.h
src/colour/: colour.h
src/control/: control.c  control.h  controller.c  controller.h
src/cpu/: core.c  core.h  cpu.c  cpu.h
src/datastruct/: queue.c  queue.h  queuenode.h
src/error/: error.h
src/input/: input.c  input.h
src/manager/: TESTEFILA.c  art_counter.c  art_counter.h  blocked.c  blocked.h  blockedstate.c  blockedstate.h  cpu.c  cpu.h  executingstate.c  executingstate.h  manager.c  manager.h  process_manager.c  process_manager.h  processmanager.c  processmanager.h  processtable.c  processtable.h  ready.c  ready.h  readystate.c  readystate.h  running.c  running.h  timer.c  timer.h
src/manager/CPU/: CPU_node.c  CPU_node.h  CPU_queue.c  CPU_queue.h
src/printer/: printer.c  printer.h
src/process/: process.c  process.h
src/processtable/: process_table.c  process_table.h  process_table_cell.c  process_table_cell.h  process_table_cell_queue.c  process_table_cell_queue.h  processtable.c  processtable.h  processtablecell.c  processtablecell.h  processtablecellqueue.c  processtablecellqueue.h
src/ready/: queue.c  queue.h  queue_node.c  queue_node.h  ready.c  ready.h
src/running/: running.c  running.h  running_queue.c  running_queue.h
